--- a/index.html
+++ b/index.html
@@ -1,499 +1,105 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>My Skills Tracker</title>
-
-    <link rel="stylesheet" href="style.css">
-
-    <style>
-
-        /* style.css */
-
-        body {
-
-            font-family: sans-serif;
-
-            margin: 0;
-
-            padding: 0;
-
-            background-color: color: #555; /* Light Tan (Background) */
-
-            color: #333;
-
-        }
-
-
-
-        .container,
-
-        header,
-
-        footer,
-
-        .skill-item,
-
-        .project-item,
-
-        .hero,
-
-        .contact,
-
-        .about {
-
-            background-color: color: #555; /* Medium Beige (Blocks) */
-
-            color: #333; /* Ensure text in these blocks is readable */
-
-        }
-
-
-
-        header a,
-
-        header h1,
-
-        .contact h2,
-
-        .contact p,
-
-        footer p {
-
-            color: #333; /* Ensure text in header, contact, and footer is readable */
-
-        }
-
-
-
-        .wave-top-right path {
-
-            fill: color: #555; /* Match header background */
-
-        }
-
-
-
-        .wave-bottom-left path {
-
-            fill: #D9B99F; /* Match footer background */
-
-        }
-
-
-
-        .about-image img {
-
-            max-width: 100%;
-
-            height: auto;
-
-            border-radius: 8px;
-
-        }
-
-
-
-        .about-text {
-
-            line-height: 1.6;
-
-            color: #333; /* Ensure text in about section is readable */
-
-        }
-
-
-
-        .skills h2,
-
-        .projects h2 {
-
-            color: #333;
-
-        }
-
-
-
-        .skill-item {
-
-            display: flex;
-
-            align-items: center;
-
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-        }
-
-
-
-        .skill-item .icon {
-
-            margin-right: 10px;
-
-            font-size: 1.2em;
-
-        }
-
-
-
-        .project-list {
-
-            display: grid;
-
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-
-            gap: 30px;
-
-        }
-
-
-
-        .project-info h3 {
-
-            margin-top: 0;
-
-            margin-bottom: 10px;
-
-        }
-
-
-
-        .project-info .duration {
-
-            color: #777;
-
-            font-size: 0.9em;
-
-            margin-bottom: 5px;
-
-        }
-
-
-
-        .project-info .description {
-
-            color: #555;
-
-            line-height: 1.5;
-
-        }
-
-
-
-        .project-item.water-level-project {
-
-            display: flex;
-
-            flex-direction: row;
-
-            align-items: center;
-
-        }
-
-
-
-        .project-item.water-level-project .project-info {
-
-            flex: 2;
-
-            padding-right: 20px;
-
-        }
-
-
-
-        .project-item.water-level-project .project-image {
-
-            flex: 1;
-
-        }
-
-
-
-        /* Responsive adjustments */
-
-        @media (max-width: 768px) {
-
-            .about-content {
-
-                flex-direction: column;
-
-                text-align: center;
-
-            }
-
-
-
-            .about-image {
-
-                margin-bottom: 20px;
-
-            }
-
-
-
-            .project-item.water-level-project {
-
-                flex-direction: column;
-
-            }
-
-
-
-            .project-item.water-level-project .project-info {
-
-                padding-right: 0;
-
-            }
-
-        }
-
-
-
-        .fade-in {
-
-            opacity: 0;
-
-            transition: opacity 0.5s ease-in-out;
-
-        }
-
-
-
-        .fade-in.active {
-
-            opacity: 1;
-
-        }
-
-    </style>
-
-</head>
-
-<body>
-
-<header>
-
-    <div class="container">
-
-        <h1>My Skills Tracker</h1>
-
-        <nav>
-
-            <ul>
-
-                <li><a href="#about">About</a></li>
-
-                <li><a href="#skills">Skills</a></li>
-
-                <li><a href="#projects">Projects</a></li>
-
-                <li><a href="#contact">Contact</a></li>
-
-            </ul>
-
-        </nav>
-
-    </div>
-
-    <div class="wave-top-right">
-
-        <svg viewBox="0 0 100 20" preserveAspectRatio="none">
-
-            <path d="M0,20 C20,0 70,0 100,20 L100,0 L0,0 Z"></path>
-
-        </svg>
-
-    </div>
-
-</header>
-
-
-
-    <section id="hero" class="hero fade-in"> <div class="container">
-
-            <div class="hero-content">
-
-                <h2>Welcome!</h2>
-
-                <p>A space to track and showcase my skills and experiences.</p>
-
-                </div>
-
-        </div>
-
-    </section>
-
-
-
-   <section id="about" class="about fade-in">
-
-    <div class="container">
-
-        <h2>About Me</h2>
-
-        <div class="about-content">
-
-            <div class="about-image">
-
-                <img src="WhatsApp Image 2025-04-26 at 21.20.56.jpeg" alt="Shriya Working on a Project">
-
-            </div>
-
-            <div class="about-text">
-
-                <p>Hey, I am Shriya, an aspiring electronics engineer deeply fascinated by the intricacies of embedded systems. My learning journey is heavily driven by hands-on projects, where I translate theoretical knowledge into tangible applications. Exploring the intersection of hardware and software is a constant source of excitement for me. This website showcases some of the embedded systems projects I've developed. Take a look and see what I've been building!</p>
-
-            </div>
-
-        </div>
-
-    </div>
-
-</section>
-
-    <section id="skills" class="skills fade-in"> <div class="container">
-
-            <h2>Skills</h2>
-
-            <div class="skills-list">
-
-                <div class="skill-item">
-
-                    <span class="icon">✨</span>
-
-                    <span>Arduino programming</span>
-
-                </div>
-
-                <div class="skill-item">
-
-                    <span class="icon">🎨</span>
-
-                    <span>Building electronic DIY projects </span>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-<section id="projects" class="projects fade-in">
-
-    <div class="container">
-
-        <h2>Projects</h2>
-
-        <div class="project-list">
-
-            <div class="project-item water-level-project">
-
-    <div class="project-info">
-
-        <h3>Water Level Monitoring System</h3>
-
-        <p class="description">Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
-
-    </div>
-
-    <div class="project-image">
-
-        <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System">
-
-    </div>
-
-</div>
-
-            <div class="project-item">
-
-                <h3>Project Title 2</h3>
-
-                <p class="duration">Start Date - End Date</p>
-
-                <p class="description">Brief description of the project and your contributions.</p>
-
-            </div>
-
-            </div>
-
-    </div>
-
-</section>
-
-
-
-    <section id="contact" class="contact fade-in"> <div class="container">
-
-            <h2>Contact Me</h2>
-
-            <p>How people can get in touch with you.</p>
-
-            </div>
-
-    </section>
-
-
-
-    <footer>
-
-    <div class="wave-bottom-left">
-
-        <svg viewBox="0 0 100 20" preserveAspectRatio="none">
-
-            <path d="M0,20 C30,0 70,0 100,20 L0,20 Z"></path>
-
-        </svg>
-
-    </div>
-
-    <div class="container">
-
-        <p>&copy; 2025 My Skills Tracker</p>
-
-    </div>
-
-</footer>
-
-
-
-    <script>
-
-        // script.js
-
-        const observer = new IntersectionObserver((entries) => {
-
-            entries.forEach((entry) => {
-
-                if (entry.isIntersecting) {
-
-                    entry.target.classList.add('active');
-
-                } else {
-
-                    entry.target.classList.remove('active');
-
-                }
-
-            });
-
-        });
-
-
-
-        const fadeElements = document.querySelectorAll('.fade-in');
-
-        fadeElements.forEach((el) => observer.observe(el));
-
-    </script>
-
-</body>
-
-</html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Skills Tracker</title>
+  
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #cccac8; /* Light grayish background */
+      color: #333;
+    }
+
+    .container {
+      width: 80%;
+      margin: auto;
+      overflow: hidden;
+      padding: 20px 0;
+    }
+
+    header {
+      background-color: #d1bba7; /* Light brownish block color */
+      color: #333;
+      padding-top: 30px;
+      min-height: 70px;
+      border-bottom: 3px solid #e8491d;
+    }
+
+    header a {
+      color: #333;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-size: 16px;
+    }
+
+    header a:hover {
+      color: #e8491d;
+      font-weight: bold;
+    }
+
+    header h1 {
+      margin: 0;
+      float: left;
+      padding: 0 10px;
+    }
+
+    header nav {
+      float: right;
+    }
+
+    header nav ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    header nav li {
+      display: inline;
+      padding: 0 20px;
+    }
+
+    .hero,
+    .about,
+    .skills,
+    .projects,
+    .contact {
+      padding: 40px 0;
+      margin-bottom: 30px;
+      background-color: #d1bba7; /* Light brownish block */
+      color: #333;
+    }
+
+    .hero .container,
+    .about .container,
+    .skills .container,
+    .projects .container,
+    .contact .container {
+      background: none;
+    }
+
+    .hero h2 {
+      font-size: 2.5em;
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+      color: #555;
+    }
+
+    .about-content {
+      display: flex;
+      gap: 30px;
+      align-items: center;
+    }
+
+    .about-image {
+      flex: 1;
+    }
+
+    .
