--- a/index.html
+++ b/index.html
@@ -1,280 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Skills Tracker</title>
-  
-  <style>
-    /* Top line animation */
-    .top-line { 
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 3mm;
-      height: 100%;
-      background-color: black;
-      animation: slideDown 2s ease-in-out forwards;
-      z-index: 1000;
-    }
-
-    @keyframes slideDown {
-      0% {
-        height: 0;
-      }
-      100% {
-        height: 100%;
-      }
-    }
-
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #cccac8;
-      color: #333;
-    }
-
-    .container {
-      width: 80%;
-      margin: auto;
-      overflow: hidden;
-      padding: 20px 0;
-    }
-
-    header {
-      background-color: #d1bba7;
-      color: #333;
-      padding-top: 30px;
-      min-height: 70px;
-      border-bottom: 3px solid #e8491d;
-      position: relative;
-      z-index: 1;
-    }
-
-    header a {
-      color: #333;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
-
-    header a:hover {
-      color: #e8491d;
-      font-weight: bold;
-    }
-
-    header h1 {
-      margin: 0;
-      float: left;
-      padding: 0 10px;
-    }
-
-    header nav {
-      float: right;
-    }
-
-    header nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    header nav li {
-      display: inline;
-      padding: 0 20px;
-    }
-
-    .hero,
-    .about,
-    .skills,
-    .projects,
-    .contact {
-      padding: 40px 0;
-      margin-bottom: 30px;
-      background-color: #d1bba7;
-      color: #333;
-    }
-
-    .hero .container,
-    .about .container,
-    .skills .container,
-    .projects .container,
-    .contact .container {
-      background: none;
-    }
-
-    .hero h2 {
-      font-size: 2.5em;
-      color: #333;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      font-size: 1.2em;
-      color: #555;
-    }
-
-    .about-content {
-      display: flex;
-      gap: 30px;
-      align-items: center;
-    }
-
-    .about-image {
-      flex: 1;
-    }
-
-    .about-image img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .about-text {
-      flex: 2;
-      line-height: 1.6;
-      color: #555;
-    }
-
-    .skills h2,
-    .projects h2,
-    .contact h2 {
-      color: #333;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    .skills-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-    }
-
-    .skill-item {
-      display: flex;
-      align-items: center;
-      padding: 15px;
-      border-radius: 5px;
-      background-color: #f9f9f9;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-    }
-
-    .skill-item .icon {
-      margin-right: 10px;
-      font-size: 1.2em;
-      color: #e8491d;
-    }
-
-    .project-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-      gap: 30px;
-    }
-
-    .project-item {
-      background-color: #f9f9f9;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .project-info h3 {
-      margin-top: 0;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    .project-info .duration {
-      color: #777;
-      font-size: 0.9em;
-      margin-bottom: 5px;
-    }
-
-    .project-info .description {
-      color: #555;
-      line-height: 1.5;
-    }
-
-    .project-item.water-level-project {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .project-item.water-level-project .project-info {
-      flex: 2;
-      padding-right: 20px;
-    }
-
-    .project-item.water-level-project .project-image {
-      flex: 1;
-    }
-
-    .project-item.water-level-project .project-image img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 5px;
-    }
-
-    .contact p {
-      text-align: center;
-      font-size: 1.1em;
-      color: #555;
-    }
-
-    footer {
-      background-color: #d1bba7;
-      color: #333;
-      text-align: center;
-      padding: 20px 0;
-      margin-top: 30px;
-    }
-
-    footer .container p {
-      margin: 0;
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        width: 95%;
-      }
-      header nav ul li {
-        padding: 0 10px;
-      }
-      header h1 {
-        font-size: 1.8em;
-      }
-      .about-content {
-        flex-direction: column;
-        text-align: center;
-      }
-      .about-image {
-        margin-bottom: 20px;
-      }
-      .project-item.water-level-project {
-        flex-direction: column;
-      }
-      .project-item.water-level-project .project-info {
-        padding-right: 0;
-      }
-      .project-list {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .fade-in {
-      opacity: 1;
-    }
-
-    .fade-in.active {
-      opacity: 1;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+
   <div class="top-line"></div>
 
   <header>
@@ -291,7 +24,7 @@
     </div>
     <div class="wave-top-right">
       <svg viewBox="0 0 100 20" preserveAspectRatio="none">
-        <path d="M0,20 C20,0 70,0 100,20 L100,0 L0,0 Z" fill="#d1bba7"></path>
+        <path d="M0,20 C20,0 70,0 100,20 L100,0 L0,0 Z"></path>
       </svg>
     </div>
   </header>
@@ -310,10 +43,10 @@
       <h2>About Me</h2>
       <div class="about-content">
         <div class="about-image">
-          <img src="WhatsApp Image 2025-04-26 at 21.20.56.jpeg" alt="Shriya Working on a Project">
+          <img src="WhatsApp Image 2025-04-26 at 21.20.56.jpeg" alt="Shriya Working on a Project" />
         </div>
         <div class="about-text">
-          <p>Hey, I am Shriya, an aspiring electronics engineer deeply fascinated by the intricacies of embedded systems...</p>
+          <p>Hey, I am Shriya, an aspiring electronics engineer deeply fascinated by the intricacies of embedded systems. My learning journey is heavily driven by hands-on projects, where I translate theoretical knowledge into tangible applications. Exploring the intersection of hardware and software is a constant source of excitement for me. This website showcases some of the embedded systems projects I've developed. Take a look and see what I've been building!</p>
         </div>
       </div>
     </div>
@@ -342,10 +75,10 @@
         <div class="project-item water-level-project">
           <div class="project-info">
             <h3>Water Level Monitoring System</h3>
-            <p class="description">Effortlessly monitor your water levels using ultrasonic sensors and Arduino Uno.</p>
+            <p class="description">Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
           </div>
           <div class="project-image">
-            <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System">
+            <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System" />
           </div>
         </div>
         <div class="project-item">
@@ -367,7 +100,7 @@
   <footer>
     <div class="wave-bottom-left">
       <svg viewBox="0 0 100 20" preserveAspectRatio="none">
-        <path d="M0,20 C30,0 70,0 100,20 L0,20 Z" fill="#d1bba7"></path>
+        <path d="M0,20 C30,0 70,0 100,20 L0,20 Z"></path>
       </svg>
     </div>
     <div class="container">
@@ -379,14 +112,14 @@
     const observer = new IntersectionObserver((entries) => {
       entries.forEach((entry) => {
         if (entry.isIntersecting) {
-          entry.target.classList.add('active');
+          entry.target.classList.add("active");
         } else {
-          entry.target.classList.remove('active');
+          entry.target.classList.remove("active");
         }
       });
     });
-    const fadeElements = document.querySelectorAll('.fade-in');
-    fadeElements.forEach((el) => observer.observe(el));
+
+    document.querySelectorAll(".fade-in").forEach((el) => observer.observe(el));
   </script>
 </body>
 </html>
