--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   </style>
 </head>
 <body>
+ <!-- Horizontal Black Arc -->
+<div class="horizontal-arc"></div>
 
 <header>
   <!-- Animated Arc -->
