--- a/index.html
+++ b/index.html
@@ -1,147 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Skills Tracker</title>
-  
-  <style>
-    /* General styles */
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #cccac8;
-      color: #333;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Skills Tracker</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Internal CSS */
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #555; /* Light Tan (Background) */
+            color: #333;
+        }
 
-    .container {
-      width: 80%;
-      margin: auto;
-      overflow: hidden;
-      padding: 20px 0;
-    }
+        .container,
+        header,
+        footer,
+        .skill-item,
+        .project-item,
+        .hero,
+        .contact,
+        .about {
+            background-color: #555; /* Medium Beige (Blocks) */
+            color: #333; /* Ensure text in these blocks is readable */
+        }
 
-    /* Header styles */
-    header {
-      background-color: #d1bba7;
-      color: #333;
-      padding-top: 30px;
-      min-height: 70px;
-      border-bottom: 3px solid #e8491d;
-      margin-top: 60px; /* Add space for the arc */
-    }
+        header a,
+        header h1,
+        .contact h2,
+        .contact p,
+        footer p {
+            color: #333; /* Ensure text in header, contact, and footer is readable */
+        }
 
-    header a {
-      color: #333;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
+        .wave-top-right path {
+            fill: #555; /* Match header background */
+        }
 
-    header a:hover {
-      color: #e8491d;
-      font-weight: bold;
-    }
+        .wave-bottom-left path {
+            fill: #D9B99F; /* Match footer background */
+        }
 
-    header h1 {
-      margin: 0;
-      float: left;
-      padding: 0 10px;
-    }
+        .about-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
 
-    header nav {
-      float: right;
-    }
+        .about-text {
+            line-height: 1.6;
+            color: #333; /* Ensure text in about section is readable */
+        }
 
-    header nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
+        .skills h2,
+        .projects h2 {
+            color: #333;
+        }
 
-    header nav li {
-      display: inline;
-      padding: 0 20px;
-    }
+        .skill-item {
+            display: flex;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-    /* Animated Arc */
-    .top-arc {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      z-index: 1000;
-      pointer-events: none;
-    }
+        .skill-item .icon {
+            margin-right: 10px;
+            font-size: 1.2em;
+        }
 
-    .top-arc svg {
-      width: 100%;
-      height: 100%;
-    }
+        .project-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
 
-    .top-arc path {
-      stroke-dasharray: 300;
-      stroke-dashoffset: 300;
-      animation: drawArc 2s ease-in-out forwards;
-    }
+        .project-info h3 {
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
 
-    @keyframes drawArc {
-      to {
-        stroke-dashoffset: 0;
-      }
-    }
+        .project-info .duration {
+            color: #777;
+            font-size: 0.9em;
+            margin-bottom: 5px;
+        }
 
-    /* Rest of the page */
-    .hero {
-      padding: 40px 0;
-      background-color: #d1bba7;
-    }
+        .project-info .description {
+            color: #555;
+            line-height: 1.5;
+        }
 
-    /* Other page section styles here... */
-  </style>
+        .project-item.water-level-project {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .project-item.water-level-project .project-info {
+            flex: 2;
+            padding-right: 20px;
+        }
+
+        .project-item.water-level-project .project-image {
+            flex: 1;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .about-content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .about-image {
+                margin-bottom: 20px;
+            }
+
+            .project-item.water-level-project {
+                flex-direction: column;
+            }
+
+            .project-item.water-level-project .project-info {
+                padding-right: 0;
+            }
+        }
+
+        .fade-in {
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .fade-in.active {
+            opacity: 1;
+        }
+    </style>
 </head>
-<body>
- <!-- Horizontal Black Arc -->
-<div class="horizontal-arc"></div>
 
+<body>
 <header>
-  <!-- Animated Arc -->
-  <div class="top-arc">
-    <svg viewBox="0 0 100 20" preserveAspectRatio="none">
-      <path d="M0,20 C20,0 70,0 100,20 L100,0 L0,0 Z" fill="none" stroke="black" stroke-width="3"/>
-    </svg>
-  </div>
-  
-  <div class="container">
-    <h1>My Skills Tracker</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+    <div class="container">
+        <h1>My Skills Tracker</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="wave-top-right">
+        <svg viewBox="0 0 100 20" preserveAspectRatio="none">
+            <path d="M0,20 C20,0 70,0 100,20 L100,0 L0,0 Z"></path>
+        </svg>
+    </div>
 </header>
 
-<section id="hero" class="hero">
-  <div class="container">
-    <h2>Welcome!</h2>
-    <p>A space to track and showcase my skills and experiences.</p>
-  </div>
+<section id="hero" class="hero fade-in">
+    <div class="container">
+        <div class="hero-content">
+            <h2>Welcome!</h2>
+            <p>A space to track and showcase my skills and experiences.</p>
+        </div>
+    </div>
 </section>
 
-<section id="about" class="about">
-  <div class="container">
-    <h2>About Me</h2>
-    <p>Content about you goes here...</p>
-  </div>
+<section id="about" class="about fade-in">
+    <div class="container">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <div class="about-image">
+                <img src="WhatsApp Image 2025-04-26 at 21.20.56.jpeg" alt="Shriya Working on a Project">
+            </div>
+            <div class="about-text">
+                <p>Hey, I am Shriya, an aspiring electronics engineer deeply fascinated by the intricacies of embedded systems. My learning journey is heavily driven by hands-on projects, where I translate theoretical knowledge into tangible applications. Exploring the intersection of hardware and software is a constant source of excitement for me. This website showcases some of the embedded systems projects I've developed. Take a look and see what I've been building!</p>
+            </div>
+        </div>
+    </div>
 </section>
 
-<!-- Rest of the sections like Skills, Projects, etc. -->
+<section id="skills" class="skills fade-in">
+    <div class="container">
+        <h2>Skills</h2>
+        <div class="skills-list">
+            <div class="skill-item">
+                <span class="icon">✨</span>
+                <span>Arduino programming</span>
+            </div>
+            <div class="skill-item">
+                <span class="icon">🎨</span>
+                <span>Building electronic DIY projects</span>
+            </div>
+        </div>
+    </div>
+</section>
 
+<section id="projects" class="projects fade-in">
+    <div class="container">
+        <h2>Projects</h2>
+        <div class="project-list">
+            <div class="project-item water-level-project">
+                <div class="project-info">
+                    <h3>Water Level Monitoring System</h3>
+                    <p class="description">Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
+                </div>
+                <div class="project-image">
+                    <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System">
+                </div>
+            </div>
+
+            <div class="project-item">
+                <h3>Project Title 2</h3>
+                <p class="duration">Start Date - End Date</p>
+                <p class="description">Brief description of the project and your contributions.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="contact fade-in">
+    <div class="container">
+        <h2>Contact Me</h2>
+        <p>How people can get in touch with you.</p>
+    </div>
+</section>
+
+<footer>
+    <div class="wave-bottom-left">
+        <svg viewBox="0 0 100 20" preserveAspectRatio="none">
+            <path d="M0,20 C30,0 70,0 100,20 L0,20 Z"></path>
+        </svg>
+    </div>
+    <div class="container">
+        <p>&copy; 2025 My Skills Tracker</p>
+    </div>
+</footer>
+
+<script>
+    // IntersectionObserver for fade-in effect
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('active');
+            } else {
+                entry.target.classList.remove('active');
+            }
+        });
+    });
+
+    const fadeElements = document.querySelectorAll('.fade-in');
+    fadeElements.forEach((el) => observer.observe(el));
+</script>
 </body>
 </html>
